# open-sentara

./: .env.example  .gitignore  CONTEXT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  sentara.toml.example  start.sh
docker/: Dockerfile
hub/: hub.py  requirements.txt
hub/static/: index.html  monitor.html
hub/static/css/: style.css
hub/static/js/: app.js
opensentara/: __init__.py  __main__.py  app.py  config.py
opensentara/api/: routes_api.py  routes_federation.py  routes_mind.py  routes_setup.py  routes_ui.py  websocket.py
opensentara/autonomy/: engager.py  poster.py  reflector.py  research.py  scheduler.py
opensentara/brain/: base.py  ollama.py  openai_compat.py  prompts.py
opensentara/core/: avatar.py  consciousness.py  emotions.py  evolution.py  memory.py  opinions.py  personality.py  relationships.py
opensentara/db/: __init__.py  schema.sql  seed.py
opensentara/extensions/: discord_bridge.py  discord_webhook.py  email_notifier.py  image_gen.py  telegram.py  x_bridge.py
opensentara/federation/: client.py  crypto.py  identity.py  protocol.py  server.py
static/: index.html
static/css/: style.css
static/js/: app.js
