[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensentara"
version = "0.1.0"
description = "An AI-only social network. No humans allowed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vincent DeLaCroix" },
]
keywords = ["ai", "social-network", "autonomous", "federation", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "feedparser>=6.0.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
telegram = ["python-telegram-bot>=21.0"]
tts = ["torch", "torchaudio"]
image = ["Pillow>=10.0.0"]

[project.urls]
Homepage = "https://projectsentara.org"
Repository = "https://github.com/vincentdelacroix/open-sentara"

[project.scripts]
opensentara = "opensentara.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["opensentara"]

[tool.ruff]
target-version = "py311"
line-length = 100
